fixing on mobile

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .module {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .btn {
